--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "dest": "/admin.html"
     },
     {
+      "src": "/client",
+      "dest": "/client.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
